  communication errors.
- Log class now allows to log exceptions and 'success' messages. A method has
  been added to retrieve all logged messages. This can be used to prevent
  logging messages twice. Log::exception() will already check if an exception
  has already been logged by adding a dynamic property $hasBeenLogged to an
  exception that gets logged.
- Code documentation: changed {@see ...} with external links to {@link ...}.


7.0.3 (2022-04-20) (WC only)
----------------------------
Bugs:
- PHP Fatal error:  Uncaught TypeError: Return value of ConfigStore::load() must
  be of the type array, bool returned in WooCommerce/Config/ConfigStore.php:16.

7.0.2 (2022-04-20) (WC only)
----------------------------
Bugs:
- WC: "Je site heeft een technisch probleem: Een fout van het type E_ERROR werd
  veroorzaakt op regelnummer 87 van het bestand .../Number.php. Foutmelding:
  Uncaught TypeError: Argument 1 passed to Number::floatsAreEqual() must be of
  the type float, string given, called in .../WooCommerce/Invoice/Creator.php on
  line 487 and ..."

7.0.1 (2022-04-19) (WC only)
----------------------------
Bugs:
- WC: "Je site heeft een technisch probleem: Een fout van het type E_ERROR werd
  veroorzaakt op regelnummer 76 van het bestand .../Number.php. Foutmelding:
  Uncaught TypeError: Argument 1 passed to Number::floatsAreEqual() must be of
  the type float, string given, called in .../WooCommerce/Invoice/Creator.php on
  line 436 and ..."

7.0.0 (2022-04-14) (WC only)
----------------------------
Note: Due to the large number of changes, especially the PHP7 strict typing
introduced in many places, this version has only been released for WooCommerce.
Other web shops will follow soon.

Bugs:
- ALL: Correcting 0% vat to vat free (one of the last phases during invoice
  completion) was not done when 0% is not allowed in the given situation.
- MA (possibly others as well): Free shipping on foreign invoices could get