@@ -36,4 +36,14 @@ class Mailer extends BaseMailer
         // @todo: adapt to MyWebShop's way of getting the webshop name.
         return Configuration::get('SHOP_NAME');
     }
+
+    public function getTo(): string
+    {
+        $return = parent::getTo();
+        if (empty($return)) {
+            // @todo: does this shop configure an administrator address?
+            $return = $this->getFrom();
+        }
+        return $return;
+    }
 }
